Support parsing `pupfile.yml`
Add the class methods, and unit tests, to generate a list of `Pup`
instances from a `pupfile.yml`.

--- a/tests/integration/kennels/kennel-trivial-sample/pupfile.yml
+++ b/tests/integration/kennels/kennel-trivial-sample/pupfile.yml
@@ -1,6 +1,3 @@
 ---
-{ name: sheepdog.pup-base, location: fs+../../pups/pup-base }
-{ name: sheepdog.pup-trivial-sample, location: fs+../../pups/pup-trivial-sample }
-
-# In the future, build the ability to specify pup file using git url.
-# { name: pup-base, location: git+https://github.com/mattjmcnaughton/pup-base.git }
+- { name: sheepdog.pup-base, location: fs+../../pups/pup-base }
+- { name: sheepdog.pup-trivial-sample, location: fs+../../pups/pup-trivial-sample }
