--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,3 @@
 [MESSAGES CONTROL]
-# disable (too-few-public-methods)
-disable=R0903
+# disable (too-few-public-methods, missing-docstring)
+disable=R0903,C0111
