--- a/tests/integration/kennels/kennel-trivial-sample/kennel.yml
+++ b/tests/integration/kennels/kennel-trivial-sample/kennel.yml
@@ -4,10 +4,10 @@
   hosts: localhost
 
   vars_files:
-    - var.yml
-    - bootstrap_vault.yml
-    - cron_vault.yml
+    - vars/var.yml
+    - vars/bootstrap_vault.yml
+    - vars/cron_vault.yml
 
   roles:
-    - pup-base
-    - pup-trivial-sample
+    - sheepdog.pup-base
+    - sheepdog.pup-trivial-sample
