--- a/tests/integration/pups/pup-trivial-sample/vars/main.yml
+++ b/tests/integration/pups/pup-trivial-sample/vars/main.yml
@@ -1,5 +1,4 @@
 ---
-encrypted_boot: {{ pup-trivial-sample_bootstrap_vault_encrypted_boot }}
-encrypted_nightly: {{ pup-trivial-sample_cron_vault_encrypted_nightly }}
-unencrypted_var: {{ pup-trivial-sample_vars_unencrypted_var }}
-
+encrypted_boot: "{{ pup_trivial_sample_bootstrap_vault_encrypted_boot }}"
+encrypted_nightly: "{{ pup_trivial_sample_cron_vault_encrypted_nightly }}"
+unencrypted_var: "{{ pup_trivial_sample_vars_unencrypted_var }}"
