Add cron behavior to `pup-base`
Fix #9

Update `pup-base` so it our local machine has cron installed.
Additionally, create a cron job at a user specified interval that will
run `sheepdog` in the `cron` run mode. Add integration tests which check
the cron job is running.

Getting cron working was fairly difficult. There were a lot of issues
around $PYTHONPATH. I believe the majority of the issues arose from the
Docker container I'm using, which updates $PATH so that the
installed python version appears first. However, this environment update
is only in scope when the Dockerfile is building. We use some
`~/.bashrc` hacking to make everything work - we'll see how this works
across different systems and update as necessary.

--- a/tests/integration/pups/pup-base/tasks/main.yml
+++ b/tests/integration/pups/pup-base/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
-- name: Tmp task to check ansible runs the base pup.
-  debug:
-    msg: "Running the base pup."
+- include: install_cron-Debian.yml
+  when: ansible_os_family == 'Debian'
+
+- include: setup_cron.yml
