--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ python:
 services:
   - docker
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y parallel
+
 install:
   - pip install -r requirements.txt
   - python setup.py develop
