--- a/tests/integration/kennels/kennel-dependencies/pupfile.yml
+++ b/tests/integration/kennels/kennel-dependencies/pupfile.yml
@@ -1,3 +1,3 @@
 ---
-- { name: sheepdog.pup-base, location: fs+../../pups/pup-base }
-- { name: sheepdog.pup-dependencies, location: fs+../../pups/pup-dependencies }
+- { name: sheepdoge.pup-base, location: fs+../../pups/pup-base }
+- { name: sheepdoge.pup-dependencies, location: fs+../../pups/pup-dependencies }
