--- a/tests/integration/kennels/kennel-external-pups/pupfile.yml
+++ b/tests/integration/kennels/kennel-external-pups/pupfile.yml
@@ -1,4 +1,4 @@
 ---
-- { name: sheepdog.pup-base, location: fs+../../pups/pup-base }
-- { name: sheepdog.pup-github, location: "git+https://github.com/mattjmcnaughton/pup-github.git" }
-- { name: sheepdog.pup-ansible-galaxy, location: "galaxy+mattjmcnaughton.pup-ansible-galaxy" }
+- { name: sheepdoge.pup-base, location: fs+../../pups/pup-base }
+- { name: sheepdoge.pup-github, location: "git+https://github.com/mattjmcnaughton/pup-github.git" }
+- { name: sheepdoge.pup-ansible-galaxy, location: "galaxy+mattjmcnaughton.pup-ansible-galaxy" }
