--- a/tests/integration/kennels/kennel-trivial-sample/pupfile.yml
+++ b/tests/integration/kennels/kennel-trivial-sample/pupfile.yml
@@ -1,3 +1,3 @@
 ---
-- { name: sheepdog.pup-base, location: fs+../../pups/pup-base }
-- { name: sheepdog.pup-trivial-sample, location: fs+../../pups/pup-trivial-sample }
+- { name: sheepdoge.pup-base, location: fs+../../pups/pup-base }
+- { name: sheepdoge.pup-trivial-sample, location: fs+../../pups/pup-trivial-sample }
