--- a/tests/integration/pups/pup-base/defaults/main.yml
+++ b/tests/integration/pups/pup-base/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-sheepdog_log_directory: ~/.sheepdog/log
-sheepdog_cron_log_name: sheepdog-cron.log
+sheepdoge_log_directory: ~/.sheepdoge/log
+sheepdoge_cron_log_name: sheepdoge-cron.log
