--- a/tests/integration/pups/pup-base/tasks/setup_cron.yml
+++ b/tests/integration/pups/pup-base/tasks/setup_cron.yml
@@ -1,25 +1,25 @@
 ---
-- name: Ensure the sheepdog log directory exists.
+- name: Ensure the sheepdoge log directory exists.
   file:
-    path: "{{ sheepdog_log_directory }}"
+    path: "{{ sheepdoge_log_directory }}"
     state: directory
     mode: u+rw
 
 - set_fact:
-    sheepdog_cron_log_path: "{{ sheepdog_log_directory }}/{{ sheepdog_cron_log_name }}"
+    sheepdoge_cron_log_path: "{{ sheepdoge_log_directory }}/{{ sheepdoge_cron_log_name }}"
 
-- name: Create the cron file to which sheepdog cron runs will write.
+- name: Create the cron file to which sheepdoge cron runs will write.
   file:
-    path: "{{ sheepdog_cron_log_path }}"
+    path: "{{ sheepdoge_cron_log_path }}"
     state: touch
     mode: u+rw
 
 # @TODO(mattjmcnaughton) Determine the most idiomatic way to do this.
 - set_fact:
-    use_virtualenv: "{{ sheepdog_use_virtualenv_for_cron | bool }}"
+    use_virtualenv: "{{ sheepdoge_use_virtualenv_for_cron | bool }}"
 
 - set_fact:
-    use_bashrc: "{{ sheepdog_use_bashrc_for_cron | bool }}"
+    use_bashrc: "{{ sheepdoge_use_bashrc_for_cron | bool }}"
 
 - name: Check if the kennel is version controlled through git.
   command: git -C "{{ playbook_dir }}" rev-parse
@@ -33,42 +33,42 @@
     git_update_cmd: "git pull origin master"
   when: git_check_result|succeeded
 
-- name: Run sheepdog with virtualenv.
+- name: Run sheepdoge with virtualenv.
   cron:
-    name: Run sheepdog cron.
-    minute: "{{ sheepdog_cron_interval_minutes }}"
-    hour: "{{ sheepdog_cron_interval_hours }}"
+    name: Run sheepdoge cron.
+    minute: "{{ sheepdoge_cron_interval_minutes }}"
+    hour: "{{ sheepdoge_cron_interval_hours }}"
     job: >
-      source {{ sheepdog_virtualenv_path }}/bin/activate &&
+      source {{ sheepdoge_virtualenv_path }}/bin/activate &&
       cd "{{ playbook_dir }}" &&
       {{ git_update_cmd }} &&
-      bash -c "sheepdog install && sheepdog run --run-mode cron" >>
-      {{ sheepdog_cron_log_path }} 2>&1
+      bash -c "sheepdoge install && sheepdoge run --run-mode cron" >>
+      {{ sheepdoge_cron_log_path }} 2>&1
   when: use_virtualenv and not use_bashrc
   notify: restart cron
 
-- name: Run sheepdog with bashrc.
+- name: Run sheepdoge with bashrc.
   cron:
-    name: Run sheepdog cron.
-    minute: "{{ sheepdog_cron_interval_minutes }}"
-    hour: "{{ sheepdog_cron_interval_hours }}"
+    name: Run sheepdoge cron.
+    minute: "{{ sheepdoge_cron_interval_minutes }}"
+    hour: "{{ sheepdoge_cron_interval_hours }}"
     job: >
       cd "{{ playbook_dir }}" &&
       {{ git_update_cmd }} &&
-      bash -c ". ~/.bashrc && sheepdog install && sheepdog run --run-mode cron" >>
-      {{ sheepdog_cron_log_path }} 2>&1
+      bash -c ". ~/.bashrc && sheepdoge install && sheepdoge run --run-mode cron" >>
+      {{ sheepdoge_cron_log_path }} 2>&1
   when: use_bashrc and not use_virtualenv
   notify: restart cron
 
-- name: Run sheepdog without virtualenv or bashrc.
+- name: Run sheepdoge without virtualenv or bashrc.
   cron:
-    name: Run sheepdog cron.
-    minute: "{{ sheepdog_cron_interval_minutes }}"
-    hour: "{{ sheepdog_cron_interval_hours }}"
+    name: Run sheepdoge cron.
+    minute: "{{ sheepdoge_cron_interval_minutes }}"
+    hour: "{{ sheepdoge_cron_interval_hours }}"
     job: >
       cd "{{ playbook_dir }}" &&
       {{ git_update_cmd }} &&
-      bash -c "sheepdog install && sheepdog run --run-mode cron" >>
-      {{ sheepdog_cron_log_path }} 2>&1
+      bash -c "sheepdoge install && sheepdoge run --run-mode cron" >>
+      {{ sheepdoge_cron_log_path }} 2>&1
   when: not use_virtualenv and not use_bashrc
   notify: restart cron
