--- a/tests/integration/tests/cron-bootstrap/Dockerfile
+++ b/tests/integration/tests/cron-bootstrap/Dockerfile
@@ -11,7 +11,7 @@ RUN pip install "ansible>=2.0,<3.0"
 RUN pip install -r requirements.txt
 
 ADD tmp_scratch /test
-ADD run_sheepdog.sh /test/run_sheepdog.sh
+ADD run_sheepdoge.sh /test/run_sheepdoge.sh
 ADD assert_e2e_state.sh /test/assert_e2e_state.sh
 
 RUN python setup.py develop
@@ -20,9 +20,9 @@ RUN chmod u+x /test/*.sh
 
 # Add the setting which prefers the newly installed python to our system
 # to our `.bashrc` file, which we will then source before running the
-# sheepdog command.
+# sheepdoge command.
 RUN echo "export PATH=/usr/local/bin:$PATH" > ~/.bashrc
 
-# Create an executable symlink to `sheepdog_runner.py` from `/usr/bin/sheepdog`.
-RUN ln -s /test/sheepdog_runner.py /usr/bin/sheepdog
-RUN chmod u+x /usr/bin/sheepdog
+# Create an executable symlink to `sheepdoge_runner.py` from `/usr/bin/sheepdoge`.
+RUN ln -s /test/sheepdoge_runner.py /usr/bin/sheepdoge
+RUN chmod u+x /usr/bin/sheepdoge
