--- a/tests/integration/tests/dependencies/Dockerfile
+++ b/tests/integration/tests/dependencies/Dockerfile
@@ -11,7 +11,7 @@ RUN pip install "ansible>=2.0,<3.0"
 RUN pip install -r requirements.txt
 
 ADD tmp_scratch /test
-ADD run_sheepdog.sh /test/run_sheepdog.sh
+ADD run_sheepdoge.sh /test/run_sheepdoge.sh
 ADD assert_e2e_state.sh /test/assert_e2e_state.sh
 
 RUN python setup.py develop
