--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,14 @@ before_install:
   - sudo apt-get install -y parallel
 
 install:
-  - pip install -r requirements.txt
-  - python setup.py develop
+  - pip install pipenv
+  - make install
 
 script:
   - make lint
   - make unit_tests
   - make integration_tests
+  - pipenv check
 
 notifications:
   email: false
