--- a/tests/integration/tests/update-kennel-before-cron/Dockerfile
+++ b/tests/integration/tests/update-kennel-before-cron/Dockerfile
@@ -1,19 +1,20 @@
-FROM python:2.7
+FROM ubuntu:16.04
 
-RUN apt-get update && apt-get install -y git
+RUN apt update
+RUN apt install -y python3 python3-apt python3-pip git
 
 WORKDIR /test
 
-RUN pip install --upgrade pip
+RUN pip3 install --upgrade pip
 # Because installing ansible is so expensive, we do it before any elements of
 # the Dockerfile which are likely to change. Docker will cache it.
-RUN pip install "ansible>=2.0,<3.0"
+RUN pip3 install "ansible>=2.0,<3.0"
 
 ADD tmp_scratch /test
 ADD run_sheepdoge.sh /test/run_sheepdoge.sh
 ADD assert_e2e_state.sh /test/assert_e2e_state.sh
 
-RUN python setup.py develop
+RUN python3 setup.py develop
 
 RUN chmod u+x /test/*.sh
 
