Additional modifications to work on python2
Install additional deps so that sheepdoge can run on both
python2 and python3.

Add make command for creating python2 environment.

Remove Pipfile.lock from git so we do a clean install each time. Not
positive if this is a good idea yet, but we shall see.

--- a/Pipfile
+++ b/Pipfile
@@ -17,8 +17,12 @@ six = ">=1.0,<2.0"
 
 [dev-packages]
 
+"backports.functools-lru-cache" = "*"
+"enum34" = "*"
 "nose2" = "<=1.0"
-pylint = ">=1.0,<2.0"
+funcsigs = "*"
 mock = ">=2.0,<3.0"
-wheel = "*"
+pylint = ">=1.0,<2.0"
+singledispatch = "*"
 twine = "*"
+wheel = "*"
