--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ configparser = ">=3.0"
 click = ">=6.0,<7.0"
 pyyaml = ">=3.0,<4.0"
 six = ">=1.0,<2.0"
+futures = {package = ">=3.0,<4.0", markers="python_version < '3.0'"}
 
 
 [dev-packages]
