Remove all cron interactions from sheepdoge tests
I originally envisioned sheepdoge being responsible for managing setting
up a cron job to run itself regularly. In hindsight, I think the user
should manage this themselves. Remove all references to cron from
pup-base and corresponding kennels, and additionally remove tests that
only tested cron behavior.

--- a/tests/integration/pups/pup-base/tasks/main.yml
+++ b/tests/integration/pups/pup-base/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
-- include: install_cron-Debian.yml
-  when: ansible_os_family == 'Debian'
 
-- include: setup_cron.yml
+- name: set the machine's hostname
+  hostname:
+    name: "{{ hostname }}"
+  when: not(
+          (hostname is undefined)
+          or
+          (hostname is none)
+          or
+          (hostname | trim == '')
+        )
