Update variable file names
The new idiomatic standard is that kennels should only have two variable
files - `vars/{main,encrypted}.yml`. Everything is stored in main,
unless it is sensitive and needs to be encrypted, in which case we store
it in `encrypted.yml`.

--- a/tests/integration/kennels/kennel-trivial-sample/kennel.yml
+++ b/tests/integration/kennels/kennel-trivial-sample/kennel.yml
@@ -4,15 +4,10 @@
   hosts: localhost
 
   vars_files:
-    - vars/var.yml
+    - vars/main.yml
+    - vars/encrypted.yml
 
   tasks:
-    - include_vars:
-        file: vars/cron_vault.yml
-
-    - include_vars:
-        file: vars/bootstrap_vault.yml
-
     - include_role:
         name: sheepdoge.pup-base
 
