--- a/tests/integration/pups/pup-trivial-sample/tasks/main.yml
+++ b/tests/integration/pups/pup-trivial-sample/tasks/main.yml
@@ -10,5 +10,5 @@
     path: "{{ secret_file }}"
     line: "{{ item }}"
   with_items:
-    - "{{ encrypted_nightly }}"
+    - "{{ encrypted_test_var }}"
     - "{{ unencrypted_var }}"
