--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,3 @@
 [MESSAGES CONTROL]
-# disable (too-few-public-methods, missing-docstring)
-disable=R0903,C0111
+# disable (too-few-public-methods, missing-docstring, unused-import)
+disable=R0903,C0111,W0611
