--- a/Pipfile
+++ b/Pipfile
@@ -9,12 +9,12 @@ name = "pypi"
 
 "e1839a8" = {path = ".", editable = true}
 ansible = ">=2.0,<3.0"
-configparser = ">=3.0"
 click = ">=6.0,<7.0"
+configparser = ">=3.0"
+futures = {package = ">=3.0,<4.0", markers="python_version < '3.0'"}
 pyyaml = ">=3.0,<4.0"
 six = ">=1.0,<2.0"
-futures = {package = ">=3.0,<4.0", markers="python_version < '3.0'"}
-
+typing = {package = ">=3.0,<4.0", markers="python_version < '3.0'"}
 
 [dev-packages]
 
@@ -23,7 +23,9 @@ futures = {package = ">=3.0,<4.0", markers="python_version < '3.0'"}
 "nose2" = "<=1.0"
 funcsigs = "*"
 mock = ">=2.0,<3.0"
+mypy = {package = "*", markers="python_version > '3.4'"}
 pylint = ">=1.0,<2.0"
 singledispatch = "*"
 twine = "*"
+typed-ast = {package = "*", markers="python_version > '3.4'"}
 wheel = "*"
