--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,17 @@ services:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y parallel
+  - sudo apt-get install -y parallel wget
 
 install:
-  - pip install pipenv
-  - pipenv install --dev
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - conda install -y bazel
+  - pip install pip-tools
 
 script:
-  - make lint
-  - make unit_tests
-  - make integration_tests
+  - make check
 
 notifications:
   email: false
