--- a/tests/integration/tests/dependencies/Dockerfile
+++ b/tests/integration/tests/dependencies/Dockerfile
@@ -1,18 +1,18 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 WORKDIR /test
 
 RUN apt update
-RUN apt install -y python3 python3-apt python3-pip
-RUN pip3 install --upgrade pip
-# Because installing ansible is so expensive, we do it before any elements of
-# the Dockerfile which are likely to change. Docker will cache it.
-RUN pip3 install "ansible>=2.0,<3.0"
+RUN apt install -y python3 python3-apt python3-pip ansible
+
+# Configure `update-alternatives` to use python3 by default.
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python2 0
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+
+RUN update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 0
 
 ADD tmp_scratch /test
 ADD run_sheepdoge.sh /test/run_sheepdoge.sh
 ADD assert_e2e_state.sh /test/assert_e2e_state.sh
-
-RUN python3 setup.py develop
 
 RUN chmod u+x /test/*.sh
