--- a/tests/integration/tests/external-pups/Dockerfile
+++ b/tests/integration/tests/external-pups/Dockerfile
@@ -1,19 +1,16 @@
-FROM ubuntu:16.04
-
-RUN apt update
-RUN apt install -y git python3 python3-apt python3-pip
+FROM ubuntu:18.04
 
 WORKDIR /test
 
-RUN pip3 install --upgrade pip
-# Because installing ansible is so expensive, we do it before any elements of
-# the Dockerfile which are likely to change. Docker will cache it.
-RUN pip3 install "ansible>=2.0,<3.0"
+RUN apt update
+RUN apt install -y python3 python3-apt python3-pip ansible git
+
+# Configure `update-alternatives` to use python3 by default.
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python2 1
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 2
 
 ADD tmp_scratch /test
 ADD run_sheepdoge.sh /test/run_sheepdoge.sh
 ADD assert_e2e_state.sh /test/assert_e2e_state.sh
-
-RUN python3 setup.py develop
 
 RUN chmod u+x /test/*.sh
