--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -2,4 +2,4 @@ nose2<=1.0
 mock>=2.0,<3.0
 pylint>=1.0,<2.0
 futures>=3.0,<3.1; python_version == "2.7"
-mypy ; python_version >= '3'
+mypy<0.600; python_version >= '3'
