Clean up sheepdoge/BUILD.bazel
Delete an unnecessary import statement.

--- a/sheepdoge/BUILD.bazel
+++ b/sheepdoge/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@sheepdoge//:requirements.bzl", "all_requirements", "requirement")
+load("@sheepdoge//:requirements.bzl", "all_requirements")
 
 filegroup(
   name = "sheepdoge_lib_fg",
