--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ before_install:
   - sudo apt-get install -y parallel wget
 
 install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - conda install -y bazel
+  - wget https://github.com/bazelbuild/bazel/releases/download/0.25.0/bazel-0.25.0-linux-x86_64
+  - mkdir bin
+  - mv bazel-0.25.0-linux-x86_64 bin/bazel
+  - chmod u+x bin/bazel
   - pip install pip-tools
 
 script:
-  - make check
+  - PATH="$TRAVIS_BUILD_DIR/bin:$PATH" make check
 
 notifications:
   email: false
